Adding project to after making public directory

--- a/book.html
+++ b/book.html
@@ -5,7 +5,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>books</title>
-   <link rel="stylesheet" href="style4.css">
+   <link rel="stylesheet" href="./public/css/style4.css">
    <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 <style>
@@ -22,14 +22,14 @@
    <div class="header2">
       <h2> 1. To Kill a Mockingbird, by Harper Lee</h2>
    </div>
-     <center> <img src="harper.jpg" alt="this is an image" height="400"> </center>
+     <center> <img src="./public/images/harper.jpg" alt="this is an image" height="400"> </center>
    <p> Published in 1960, this timeless classic explores human behaviour and the collective conscience of The Deep South in the early 20th century. Humour entwines the delicate strands of prejudice, hatred, hypocrisy, love and innocence to create one of the best novels ever written.</p>
    <p><a href="https://www.amazon.com/dp/0060935464?tag=s7621-20">Print</a> | <a href="https://www.amazon.com/dp/B00K1XOV5G?tag=s7621-20">eBook</a> | <a href="https://www.amazon.com/dp/B00K1HPPXO/ref=tmm_aud_swatch_0?_encoding=UTF8&amp;qid=1504235797&amp;sr=8-1?tag=s7621-20">Audiobook</a></p>
    <hr> <hr>
    <div class="header2">
    <h2> 2. 1984, by George Orwell</h2>
 </div>
-   <center> <img src="george.jpg" height="400">    </center>
+   <center> <img src="./public/images/george.jpg" height="400">    </center>
    <p>Although 1984 has passed us by, George Orwell’s dystopian, totalitarian world of control, fear and lies has never been more relevant. Delve into the life of Winston Smith as he struggles with his developing human nature in a world where individuality, freewill and love are forbidden.</p>
    <p><a href="https://www.amazon.com/dp/0822235927?tag=s7621-20">Print</a> | <a href="https://www.amazon.com/dp/B008DM45VC?tag=s7621-20">eBook</a> | <a href="https://www.amazon.com/dp/B018Y9OI1U?tag=s7621-20">Audiobook</a></p>
   
@@ -37,21 +37,21 @@
    <div class="header2">
       <h2> 3. Harry Potter and the Philosopher’s Stone, by J.K. Rowling</h2>
    </div>
-      <center> <img src="harry.jpg" height="400"> </center>
+      <center> <img src="./public/images/harry.jpg" height="400"> </center>
       <p> I’m willing to bet you’ve heard of Harry Potter, but have you read the books? Join Harry Potter as he begins his journey into the world of magic, where he is the celebrated Boy Who Lived. Visit Hogwarts, meet your favourite characters and watch Harry grow into the one of the most famous literary characters in the world.</p>
       <p><a href="https://www.amazon.com/dp/059035342X?tag=s7621-20">Print</a> | <a href="https://www.amazon.com/dp/B019PIOJYU?tag=s7621-20">eBook</a> | <a href="https://www.amazon.com/dp/B017V54CEQ?tag=s7621-20">Audiobook</a></p>
       <hr><hr>
       <div class="header2">
       <h2>4. The Lord of the Rings, by J.R.R. Tolkien</h2>
    </div>
-      <center> <img src="jrr.jpg" height="400"></center>
+      <center> <img src="./public/images/jrr.jpg" height="400"></center>
       <p> Middle Earth is a wonderful, expansive fantasy world filled with turmoil, heroes, evil and innocence. Although our protagonist Frodo Baggins’ quest seems impossible to complete, this trilogy is a tale of triumph in the most impossible circumstances. </p>
       <p><a href="https://www.amazon.com/dp/0544003411?tag=s7621-20">Print</a> | <a href="https://www.amazon.com/dp/B002RI9176?tag=s7621-20">eBook</a> | <a href="https://www.amazon.com/dp/B01K3LIUNO?tag=s7621-20">Audiobook</a></p>
       <hr> <hr>
       <div class="header2">
       <h2> 5. The Great Gatsby, by F. Scott Fitzgerald</h2>
    </div>
-      <center> <img src="great.jpg" height="400" width="300"></center>
+      <center> <img src="./public/images/great.jpg" height="400" width="300"></center>
       <p> Published in 1925, Fitzgerald’s The Great Gatsby explores the decadence of the Jazz Age, and one man’s introduction into a world where even those with the most indulgent lives cannot earn love.</p>
       <p><a href="https://www.amazon.com/dp/1781396833?tag=s7621-20">Print</a> | <a href="https://www.amazon.com/dp/B00EJRPZEQ?tag=s7621-20">eBook</a> | <a href="https://www.amazon.com/dp/B00435MT3E?tag=s7621-20">Audiobook</a></p>
       <div class="header">
