--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>About me </title>
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="./public/css/style.css">
    <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 <style>
@@ -20,14 +20,14 @@
     <h3> <center> <table border="1"> </center>
       <tr>
          <td> <a href="JavaScript:window.close()">  &nbsp; &nbsp; &nbsp;Close  &nbsp; &nbsp; &nbsp;</a></td>
-         <td> <a href="about2.html" target="_blank"> &nbsp;&nbsp; &nbsp;  Description&nbsp;&nbsp; &nbsp;</a> </td>
-         <td> <a href="book.html" target="_blank"> &nbsp; &nbsp;&nbsp;Books &nbsp;&nbsp; &nbsp; </a></td>
+         <td> <a href="./about2.html" target="_blank"> &nbsp;&nbsp; &nbsp;  Description&nbsp;&nbsp; &nbsp;</a> </td>
+         <td> <a href="./book.html" target="_blank"> &nbsp; &nbsp;&nbsp;Books &nbsp;&nbsp; &nbsp; </a></td>
       </tr>
    </table> </h3>
    <br> <hr>
  <h2 text align="center"> INTRODUCTION </h2>
 
- <center> <img src="pic.jpg" alt="this is an image" height="400"> </center>
+ <center> <img src="./public/images/pic.jpg" alt="this is an image" height="400"> </center>
  <p> My name is Sujeet Kumar and currently i am persuing MCA from MANIT,Bhopal and i live in Patna,Bihar I always wanted to become engineer so i am persuing MCA. I would love to Surf the internet and scroling new feeds. i love to know about histories.I have passed matriculation from Arora international school. I had passed Inter from SGGGS college patna city and Graduated from the Arcade Business college and currently persuing MCA from MANIT,Bhopal. I always wanted to become engineer so i am persuing MCA. </p>
  <center><p> Follow me on -<a href="https://www.facebook.com/winnersujeet" target="_blank"> Facebook </a>&nbsp;||
    <a href="https://www.twitter.com/winnersujeet" target="_blank"> Twitter </a>&nbsp;||
@@ -44,13 +44,13 @@
 </ul>
  <center><table border="1">
    <thead>
-      <img src="school1.png" alt="this is an image" height="300" width="300"> &nbsp; &nbsp;
+      <img src="./public/images/pic.jpgschool1.png" alt="this is an image" height="300" width="300"> &nbsp; &nbsp;
    </thead>
-   <thead> <img src="sggs.jpeg" alt="this is an image" height="300" width="300">  &nbsp; &nbsp;
+   <thead> <img src="./public/images/pic.jpgsggs.jpeg" alt="this is an image" height="300" width="300">  &nbsp; &nbsp;
    </thead>
- <img src="arcade.jpg" alt="this is an image" height="300" width="300">  &nbsp; &nbsp;
+ <img src="./public/images/pic.jpgarcade.jpg" alt="this is an image" height="300" width="300">  &nbsp; &nbsp;
 </thead>
- <img src="manit.jpg" alt="this is an image" height="300" width="300"> 
+ <img src="./public/images/pic.jpgmanit.jpg" alt="this is an image" height="300" width="300"> 
 </thead>
 </table> </center>
       <br> <hr>  
@@ -64,18 +64,18 @@
    </ul>
    <center><table border="1">
       <thead>
-         <img src="write.jpg" alt="this is an image" height="300" width="300"> &nbsp; &nbsp;
+         <img src="./public/images/pic.jpgwrite.jpg" alt="this is an image" height="300" width="300"> &nbsp; &nbsp;
       </thead>
-      <thead> <img src="test.jpg" alt="this is an image" height="300" width="300">  &nbsp; &nbsp;
+      <thead> <img src="./public/images/pic.jpgtest.jpg" alt="this is an image" height="300" width="300">  &nbsp; &nbsp;
       </thead>
-    <img src="badmintion.jpg" alt="this is an image" height="300" width="300">  &nbsp; &nbsp;
+    <img src="./public/images/pic.jpgbadmintion.jpg" alt="this is an image" height="300" width="300">  &nbsp; &nbsp;
    </thead>
-    <img src="movies.jpg" alt="this is an image" height="300" width="300"> 
+    <img src="./public/images/pic.jpgmovies.jpg" alt="this is an image" height="300" width="300"> 
    </thead>
    </table> </center>
    <br> <hr>
    <div class="mca">
-     <a href="about2.html" target="_blank"> <h2><center> SUBJECTS IN MCA </center></h2> </a> 
+     <a href="./about2.html" target="_blank"> <h2><center> SUBJECTS IN MCA </center></h2> </a> 
    <ul>
       <li><b>C programming </b> </li>
       <li><b>Operating system  </b> </li>
