fixed image bug in index.html

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 </ul>
  <center><table border="1">
    <thead>
-      <img src="./public/images/pic.jpgschool1.png" alt="this is an image" height="300" width="300"> &nbsp; &nbsp;
+      <img src="./public/images/school1.png" alt="this is an image" height="300" width="300"> &nbsp; &nbsp;
    </thead>
-   <thead> <img src="./public/images/pic.jpgsggs.jpeg" alt="this is an image" height="300" width="300">  &nbsp; &nbsp;
+   <thead> <img src="./public/images/sggs.jpeg" alt="this is an image" height="300" width="300">  &nbsp; &nbsp;
    </thead>
- <img src="./public/images/pic.jpgarcade.jpg" alt="this is an image" height="300" width="300">  &nbsp; &nbsp;
+ <img src="./public/images/arcade.jpg" alt="this is an image" height="300" width="300">  &nbsp; &nbsp;
 </thead>
- <img src="./public/images/pic.jpgmanit.jpg" alt="this is an image" height="300" width="300"> 
+ <img src="./public/images/manit.jpg" alt="this is an image" height="300" width="300"> 
 </thead>
 </table> </center>
       <br> <hr>  
@@ -64,13 +64,13 @@
    </ul>
    <center><table border="1">
       <thead>
-         <img src="./public/images/pic.jpgwrite.jpg" alt="this is an image" height="300" width="300"> &nbsp; &nbsp;
+         <img src="./public/images/write.jpg" alt="this is an image" height="300" width="300"> &nbsp; &nbsp;
       </thead>
-      <thead> <img src="./public/images/pic.jpgtest.jpg" alt="this is an image" height="300" width="300">  &nbsp; &nbsp;
+      <thead> <img src="./public/images/test.jpg" alt="this is an image" height="300" width="300">  &nbsp; &nbsp;
       </thead>
-    <img src="./public/images/pic.jpgbadmintion.jpg" alt="this is an image" height="300" width="300">  &nbsp; &nbsp;
+    <img src="./public/images/badmintion.jpg" alt="this is an image" height="300" width="300">  &nbsp; &nbsp;
    </thead>
-    <img src="./public/images/pic.jpgmovies.jpg" alt="this is an image" height="300" width="300"> 
+    <img src="./public/images/movies.jpg" alt="this is an image" height="300" width="300"> 
    </thead>
    </table> </center>
    <br> <hr>
