--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
    <li><b>Completed BCA from Arcade Business College in 2019</b></li>
    <li><b>Now, persuing MCA from MANIT</b></li>
 </ul>
- <center><table border="1">
+ <!-- <center><table border="1">
    <thead>
       <img src="./public/images/school1.png" alt="this is an image" height="300" width="300"> &nbsp; &nbsp;
    </thead>
@@ -52,7 +52,21 @@
 </thead>
  <img src="./public/images/manit.jpg" alt="this is an image" height="300" width="300"> 
 </thead>
-</table> </center>
+</table> </center> -->
+<div class="galleryContainer">
+   <div class="imgCont">
+      <img class="responsive-img" alt="image 1" src="./public/images/school1.png">
+   </div>
+   <div class="imgCont">
+      <img class="responsive-img" alt="image 1" src="./public/images/sggs.jpeg">
+   </div>
+   <div class="imgCont">
+      <img class="responsive-img" alt="image 1" src="./public/images/arcade.jpg">
+   </div>
+   <div class="imgCont">
+      <img class="responsive-img" alt="image 1" src="./public/images/manit.jpg">
+   </div>
+</div>
       <br> <hr>  
       
     <h2 text align="center"> HOBBIES </h2> 
@@ -62,17 +76,32 @@
    <li> <b>Playing Badminton </b></li>
    <li><b> Watching Indian movies </b></li>
    </ul>
-   <center><table border="1">
+   <!-- <center><table border="1">
       <thead>
          <img src="./public/images/write.jpg" alt="this is an image" height="300" width="300"> &nbsp; &nbsp;
       </thead>
-      <thead> <img src="./public/images/test.jpg" alt="this is an image" height="300" width="300">  &nbsp; &nbsp;
+      <thead> 
+         <img src="./public/images/test.jpg" alt="this is an image" height="300" width="300">  &nbsp; &nbsp;
       </thead>
     <img src="./public/images/badmintion.jpg" alt="this is an image" height="300" width="300">  &nbsp; &nbsp;
    </thead>
     <img src="./public/images/movies.jpg" alt="this is an image" height="300" width="300"> 
    </thead>
-   </table> </center>
+   </table> </center> -->
+   <div class="galleryContainer">
+      <div class="imgCont">
+         <img class="responsive-img" alt="image 1" src="./public/images/write.jpg">
+      </div>
+      <div class="imgCont">
+         <img class="responsive-img" alt="image 1" src="./public/images/test.jpg">
+      </div>
+      <div class="imgCont">
+         <img class="responsive-img" alt="image 1" src="./public/images/badmintion.jpg">
+      </div>
+      <div class="imgCont">
+         <img class="responsive-img" alt="image 1" src="./public/images/movies.jpg">
+      </div>
+   </div>
    <br> <hr>
    <div class="mca">
      <a href="./about2.html" target="_blank"> <h2><center> SUBJECTS IN MCA </center></h2> </a> 
